<resources>
    <string name="app_name" translatable="false">MediMate</string>
    <string name="title_home">Accueil</string>
    <string name="title_dashboard">Mes tâches</string>
    <string name="title_notifications">Conseils</string>
    <string name="title_profil">Profil</string>
    <string name="chargement">Chargement des données…</string>
    <string name="chargement_scan">Lecture de l\'ordonnance…</string>
    <string name="médi_title">Mes tâches</string>
    <string name="retour">Retour</string>
    <string name="find_medic">Aucun médecin trouvé</string>
    <string name="modifier">Modifier</string>
    <string name="details">Détails</string>
    <string name="add_a_task_to_do">Ajouter une tâche à faire</string>
    <string name="back_today">Retour aujourd\'hui</string>
    <string name="bienvenue_sur_medi_mate">Bienvenue sur MediMate !</string>
    <string name="creer_mon_compte">Créer mon compte</string>
    <string name="medimatemate">MediMate est une application incroyable réalisée par des étudiants en 3ème année de BUT Informatique à l\'IUT de Nantes !</string>
    <string name="sexe">Sexe</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="date_naissance">Date de naissance</string>
    <string name="poids">Poids (en kg)</string>
    <string name="taille">Taille (en cm)</string>
    <string name="suivant">Suivant</string>
    <string name="soucis">Soucis de santé en cours</string>
    <string name="regime">Régime alimentaire</string>
    <string name="allergies">Allergies</string>
    <string name="informations_du_medicament">Informations du médicament</string>
    <string name="nom_du_medicament">Nom du médicament</string>
    <string name="dosage_du_medicament">Dosage du médicament</string>
    <string name="forme_pharamaceutique">Forme pharamaceutique</string>
    <string name="frequence_de_prise">Fréquence de prise</string>
    <string name="heure_fixe_jour">Une ou plusieurs fois par jours</string>
    <string name="prise_unique">Prise unique</string>
    <string name="plus_d_options">Plus d\'options</string>
    <string name="pitite_image_de_calendrier">Pitite image de calendrier</string>
    <string name="pitite_image_de_medicament">pitite image de medicament</string>
    <string name="quand_voulez_vous_recevoir_des_rappels">Quand voulez-vous recevoir des rappels ?</string>
    <string name="heure_de_prise_et_dosage">Heure de prise et dosage</string>
    <string name="heure">Heure</string>
    <string name="fleche">fleche</string>
    <string name="nombre_de_doses">Nombre de doses</string>
    <string name="bonjour">Bonjour,</string>
    <string name="infos">Vos informations</string>
    <string name="stats">Vos statistiques</string>
    <string name="params">Paramètres</string>
    <string name="contact_us">Nous contacter</string>
    <string name="legal_notice">Mentions légal</string>
    <string name="credits">Crédits</string>
    <string name="select_account">Selectionnez votre compte</string>
    <string name="ans">ans</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="se_d_connecter">Se déconnecter</string>
    <string name="medi_searchbar">Chercher le nom d’un médicament</string>
    <string name="check_fields">Veuillez vérifier les champs saisis.</string>
    <string name="fill_fields">Veuillez remplir les champs.</string>
    <string name="error_medicine_not_found">Erreur, médicament introuvable</string>
    <string name="error">erreur</string>
    <string name="intervalle">Intervalle</string>
    <string name="multi_per_day">Plusieurs fois par jours</string>
    <string name="specifique_day">Jours spécifiques dans la semaine</string>
    <string name="cycle">Cycle</string>
    <string name="ex_intervalle">ex: une fois tous les deux jours, un fois toutes les 6 heures, …</string>
    <string name="ex_multi_per_day">ex: 3 fois par jours, 2 fois par jour, …</string>
    <string name="ex_specifique_day">ex: lundi, mardi et jeudi</string>
    <string name="ex_cycle">ex: 21 jours de prise, 7 jours de pause</string>
    <string name="every_hour">Toutes les heures</string>
    <string name="every_day">Tous les jours</string>
    <string name="delete_account">Supprimer mon compte</string>
    <string name="jaccepte_les">J\'accepte les </string>
    <string name="conditions_generales_dutilisation">conditions générales d\'utilisation</string>
    <string name="politique_de_confidentialite">politique de confidentialité</string>
    <string name="jaccepte_la">J\'accepte la </string>
    <string name="string_conditions">Pour utiliser l\'application MediMate, vous devez accepter les conditions générales d\'utilisation et la politique de confidentialité de l\'application.</string>
    <string name="titreCGU">Conditions générales d\'utilisation</string>
    <string name="rappel_tous_les">rappel tous les</string>
    <string name="rappel_toutes_les">rappel toutes les</string>
    <string name="heures">Heures</string>
    <string name="jours">Jours</string>
    <string name="email">Email</string>
    <string name="titrePC">Politique de confidentialité</string>
    <string name="rappels_heures_fixes">Rappels à heures fixes</string>
    <string name="ajouter_tache">Ajouter une tâche</string>
    <string name="dosage">Dosage</string>
    <string name="need_to_add_taking_in_list">"Veuillez ajouter au moins une heure de prise"</string>
    <string name="acceder_votre_messagerie">Accéder à votre messagerie</string>
    <string name="activer_la_localisation">Activer la localisation</string>
    <string name="lier_la_biometrie">Lier la biométrie \n à mon compte</string>
    <string name="recapitulatif_de_votre_tache">Récapitulatif de votre tâche</string>
    <string name="valider">Valider</string>
    <string name="date_prochaine_prise">Date prochaine prise :</string>
    <string name="cree_le">Crée le :</string>
    <string name="informations_nsur_la_prise">Informations sur la prise</string>
    <string name="stockage_mediacament">Stockage du médicament</string>
    <string name="stockage_du_medicament">Stockage du médicament</string>
    <string name="stockage_actuel">Stockage actuel :</string>
    <string name="alerte_stockage">Valeur d\'alerte :</string>
    <string name="definissez_une_valeur_en_dessous_de_laquelle_vous_serez_alert">Définissez une valeur en dessous de laquelle vous serez alerté.</string>
    <string name="definissez_votre_stockage_actuel">Définissez votre stockage actuel.</string>
    <string name="combien_de_doses">Combien de doses ?</string>
    <string name="weight_sup_a_0">Le dosage doit être supérieur à 0</string>
    <string name="takes_cycle">prise en cycle</string>
    <string name="nb_jours_prises">Durée du traitement</string>
    <string name="nb_jours_repos">Durée du repos</string>
    <string name="date_commence_traitement">Date de début du traitement</string>
    <string name="cycle_duration_too_short">La durée du cycle doit être supérieure à 0</string>
    <string name="rappel_jour_cycle">Rappel à chaque jours actifs du cycle</string>
    <string name="gerer_le_stockage">Gérer le stockage</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="cgu1">1. Objectif de l\'Application</string>
    <string name="cgu11">1.1 MediMate est une application mobile de suivi de prise de médicaments. Elle vise à aider les utilisateurs à gérer leur traitement en enregistrant et en rappelant les prises de médicaments.</string>
    <string name="cgu2">2. Utilisation de l\'Application</string>
    <string name="cgu21">2.1 Vous devez utiliser l\'application conformément à toutes les lois et réglementations locales, nationales et internationales applicables.</string>
    <string name="cgu22">2.2 Vous êtes responsable de la confidentialité de vos informations de connexion et de l\'accès à votre compte utilisateur.</string>
    <string name="cgu3">3. Collecte et Utilisation des Données Personnelles</string>
    <string name="cgu31">3.1 En utilisant l\'application, vous consentez à la collecte, au stockage et à l\'utilisation de vos données personnelles conformément à notre Politique de Confidentialité.</string>
    <string name="cgu4">4. Responsabilités de l\'Utilisateur</string>
    <string name="cgu41">4.1 Vous êtes responsable de l\'exactitude des informations que vous fournissez dans l\'application, y compris les détails de votre traitement médicamenteux.</string>
    <string name="cgu42">4.2 Vous acceptez que l\'application ne remplace pas les conseils médicaux professionnels. Consultez toujours un professionnel de la santé pour des conseils spécifiques à votre situation.</string>
    <string name="cgu5">5. Modifications et Interruptions</string>
    <string name="cgu51">5.1 MediMate se réserve le droit de modifier, suspendre ou interrompre l\'application à tout moment, pour quelque raison que ce soit, sans préavis.</string>
    <string name="cgu6">6. Limitation de Responsabilité</string>
    <string name="cgu61">6.1 MediMate ne sera pas responsable des dommages directs, indirects, spéciaux, consécutifs ou punitifs résultant de l\'utilisation de l\'application.</string>
    <string name="cgu7">7. Modifications des Conditions Générales d\'Utilisation</string>
    <string name="cgu71">7.1 MediMate se réserve le droit de modifier ces CGU à tout moment. Les utilisateurs seront informés des modifications via l\'application.</string>
    <string name="pcdate">Dernière mise à jour : 11/01/24</string>
    <string name="pc1">1. Informations Collectées</string>
    <string name="pc11">1.1 Informations Fournies par l\'Utilisateur : Lors de l\'utilisation de l\'application, vous pouvez être invité à fournir des informations telles que votre nom, votre adresse e-mail, vos médicaments, et d\'autres données liées à votre traitement médicamenteux.</string>
    <string name="pc12">1.2 Données de l\'Appareil : Nous collectons des informations sur l\'appareil que vous utilisez pour accéder à l\'application, y compris le modèle, la version du système d\'exploitation, et d\'autres informations similaires.</string>
    <string name="pc2">2. Utilisation des Informations</string>
    <string name="pc21">2.1 Nous utilisons les informations renseignées uniquement dans le cadre du fonctionnement de l\'application, et dans l\'accomplissement de ses objectifs premiers.</string>
    <string name="pc3">3. Stockage et Partage des Informations</string>
    <string name="pc31">3.1 Vos informations sont stockées de manière sécurisée sur votre appareil. Nous n\'avons aucun accès aux données que vous renseignez sur l\'application, et les données ne sont pas diffusées.</string>
    <string name="pc32">3.2 Vous pouvez partager certaines informations par SMS ou par mail à un médecin, mais MediMate n\'est aucunement responsable des données partagées.</string>
    <string name="pc4">4. Accès et Contrôle de Vos Informations</string>
    <string name="pc41">4.1 Vous pouvez accéder et mettre à jour certaines de vos informations personnelles directement à partir de l\'application.</string>
    <string name="pc42">4.2 Vos données sont automatiquement supprimées lors de la suppression de votre compte ou lorsque vous désinstallez MediMate. Les discussions avec un médecin ne sont pas supprimées.</string>
    <string name="pc5">5. Liens vers des Sites Tiers</string>
    <string name="pc51">5.1 L\'application peut contenir des liens vers des sites tiers. Cette politique de confidentialité ne s\'applique pas à ces sites, et nous ne sommes pas responsables de leurs pratiques de confidentialité.</string>
    <string name="pc6">6. Modifications de la Politique de Confidentialité</string>
    <string name="pc61">6.1 Nous nous réservons le droit de modifier cette politique de confidentialité à tout moment. Les utilisateurs seront informés des modifications via l\'application.</string>
    <string name="title_dairy">Journal</string>
</resources>