<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/maison"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/medicament"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_dairy"
        android:icon="@drawable/journal"
        android:title="@string/title_dairy" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ampoule"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/personne"
        android:title="@string/title_profil" />

</menu>